<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fabregas.ejercicio6.MainActivity">

    <RadioButton
        android:text="@string/textoBlanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blanco"
        android:layout_above="@+id/checkBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="22dp" />

    <RadioButton
        android:text="@string/textoAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/azul"
        android:layout_above="@+id/blanco"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/textoAmarillo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/amarillo"
        android:layout_above="@+id/azul"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:text="@string/fondoVerde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verde"
        android:layout_below="@+id/rojo"
        android:layout_alignRight="@+id/negro"
        android:layout_alignEnd="@+id/negro" />

    <RadioButton
        android:text="@string/fondoRojo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rojo"
        android:layout_below="@+id/negro"
        android:layout_alignLeft="@+id/verde"
        android:layout_alignStart="@+id/verde" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/negro"
        android:text="@string/fondoNegro"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:text="@string/muestra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:checked="false"
        android:onClick="onRadioButtonClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textStyle="normal|bold"
        android:textSize="@android:dimen/app_icon_size"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
